feat: Restructure project into monorepo architecture
##  MAJOR RESTRUCTURE: ChronoGuard Pro  Monorepo

### What We Accomplished:
-  Restructured entire project into clean monorepo format
-  Moved backend to packages/backend/ (preserved preferred backend code)
-  Moved frontend to packages/frontend/ (ready for replacement)
-  Created packages/ml/ and packages/shared/ for modularity
-  Set up workspace configuration (npm, pnpm, lerna support)
-  Created unified development scripts and Docker configuration
-  Both backend and frontend are now running successfully

### New Structure:
`
chronoguard-pro/
 packages/
    backend/          # Python FastAPI (preserved as preferred)
    frontend/         # Next.js (ready for replacement)
    ml/              # Machine learning components
    shared/          # Shared utilities and types
 scripts/             # Unified development scripts
 package.json         # Root workspace configuration
 docker-compose.yml   # Multi-service containerization
 README.md           # Updated documentation
`

### Issues Encountered & Resolved:
1. **Dependency Conflicts**:
   - Problem: psycopg2-binary required PostgreSQL dev tools
   - Solution: Created requirements-dev.txt with minimal SQLite dependencies

2. **Rust Compilation Issues**:
   - Problem: pydantic-core required Rust toolchain
   - Solution: Used existing working backend instead of reinstalling

3. **Path Resolution**:
   - Problem: Module import errors from wrong working directory
   - Solution: Ensured proper directory structure and import paths

4. **Process Management**:
   - Problem: Multiple failed startup attempts
   - Solution: Used background processes and proper terminal management

### Current Status:
-  Backend: Running on http://localhost:7000
-  Frontend: Running on http://localhost:7501
-  API Documentation: http://localhost:7000/docs
-  Database: SQLite working with real data persistence

### Next Steps for Merging:
1. Replace packages/frontend/ with preferred fronte

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 
 services:
   # PostgreSQL Database
@@ -9,7 +10,7 @@ services:
       POSTGRES_PASSWORD: chronoguard_password
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./packages/backend/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     healthcheck:
@@ -36,7 +37,7 @@ services:
   backend:
     build:
       context: .
-      target: backend
+      dockerfile: packages/backend/Dockerfile
     environment:
       DATABASE_URL: postgresql://chronoguard_user:chronoguard_password@db:5432/chronoguard_db
       REDIS_URL: redis://redis:6379
@@ -51,7 +52,7 @@ services:
       redis:
         condition: service_healthy
     volumes:
-      - ./ml/models:/app/ml/models
+      - ./packages/ml/models:/app/ml/models
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -62,7 +63,7 @@ services:
   celery-worker:
     build:
       context: .
-      target: backend
+      dockerfile: packages/backend/Dockerfile
     command: celery -A app.celery worker --loglevel=info
     environment:
       DATABASE_URL: postgresql://chronoguard_user:chronoguard_password@db:5432/chronoguard_db
@@ -74,13 +75,13 @@ services:
       redis:
         condition: service_healthy
     volumes:
-      - ./ml/models:/app/ml/models
+      - ./packages/ml/models:/app/ml/models
 
   # Celery Beat Scheduler
   celery-beat:
     build:
       context: .
-      target: backend
+      dockerfile: packages/backend/Dockerfile
     command: celery -A app.celery beat --loglevel=info
     environment:
       DATABASE_URL: postgresql://chronoguard_user:chronoguard_password@db:5432/chronoguard_db
@@ -92,13 +93,13 @@ services:
       redis:
         condition: service_healthy
     volumes:
-      - ./ml/models:/app/ml/models
+      - ./packages/ml/models:/app/ml/models
 
   # Frontend
   frontend:
     build:
       context: .
-      target: frontend
+      dockerfile: packages/frontend/Dockerfile
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:7000/api/v1
     ports:
